force-app/main/default/objects/Initiative__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>What department or group does this initiative support?</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>category AAA</fullName>
            </value>
            <value>
                <fullName>category BBB</fullName>
            </value>
            <value>
                <fullName>category CCC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>