force-app/main/default/objects/Initiative__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <inlineHelpText>When do we want this Initiative completed?</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>