force-app/main/default/objects/Initiative__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Goal</label>
    <referenceTo>CitronHygiene_Goal__c</referenceTo>
    <relationshipLabel>Initiatives</relationshipLabel>
    <relationshipName>Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>