force-app/main/default/objects/Initiative__c/fields/Initiative_Description__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Description__c</fullName>
    <inlineHelpText>Please provide a summary of what should be achieved with this initiative.</inlineHelpText>
    <label>Initiative Description</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>