force-app/main/default/objects/Initiative__c/fields/Status_RYG__c.field-meta.xml
<CustomField>
    <fullName>Status_RYG__c</fullName>
    <formula>IMAGE(CASE( Status__c , &quot;Green&quot;, &quot;/img/samples/light_green.gif&quot;, &quot;Yellow&quot;, &quot;/img/samples/light_yellow.gif&quot;, &quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;,&quot;/img/samples/light_red.gif&quot;),&quot;Current Project Phase&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status RYG</label>
    <type>Text</type>
</CustomField>